# libvct

./: meson.build
include/: vct.h
